# whatsapp-qt

./: AGENTS.md  CMakeLists.txt  README.md  flake.nix  snapcraft.yaml  vcpkg-configuration.json  vcpkg.json  whatsapp-qt.desktop
.github/workflows/: snapcraft.yml
include/: AppRegistration.hpp  AutoStart.hpp  Constants.hpp  Tray.hpp  WebProfile.hpp  WhatsAppView.hpp
resources/: resources.qrc
src/: AppRegistration.cpp  AutoStart.cpp  Tray.cpp  WebProfile.cpp  WhatsAppView.cpp  main.cpp
tests/: validate.sh
